init swapchain surface and fitting queue family finding done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ file(GLOB_RECURSE vpg_HEADERS "include/*.hpp")
 
 include_directories(include)
 add_executable(vulkan-playground ${vpg_SOURCES})
-target_link_libraries(vulkan-playground vulkan)
+target_link_libraries(vulkan-playground vulkan xcb)
